# shark-lab

./: README.md
kubernetes/: docker.md  overview.md
kubernetes/lab/: Dockerfile  docker-compose.yml  heroes-pod.json  heroes-pod.replicaset.json  heroes-pod.replicaset.usingsvcmongo.json  heroes.deployment.json  heroes.svc.json  ingress-controller-nginx.yaml  ingress-heroes.1.json  ingress-heroes.yaml  mongo-sts.json  mongodb-pod.json  mongodb.svc.json  nginx-default-backend.yaml  nginx.yaml  persistent-app.json  persistent-volume-claim.json  persistent-volume.json
kubernetes/lab/autoscaling/: api-heroes-hpa.json
kubernetes/lab/k8s-jobs/: jobs.json
kubernetes/lab/server/: app.py  requeriments.txt  run.sh
kubernetes/rancher/: config.md  rancher-microk8s-ingress.yaml  rancher-microk8s.yaml
kubernetes/vagrant/: README.md  Vagrantfile
python/structure/: README.md  requirements.txt
python/structure/dercypy/: __init__.py  __main__.py
python/structure/dercypy/controllers/: health.py  quotes.py
python/structure/dercypy/models/: __init__.py  config.py  database.py
python/structure/docker/: Dockerfile  docker-compose.yml  postgresql.Dockerfile
scripts/: autoscaling-linuxacademy.cloudformation.json  lamp-linuxacademy.cloudformation.json  springboot-generator.sh
serverless/: README.md  handler.py  handler2.py  serverless.stepfunc.yml
training/: README.md
training/devops/: gitflow.md  weapons.md
tuning/: README.md  handler.py
tuning/pyext-countloop/: Cargo.toml
tuning/pyext-countloop/src/: lib.rs
vscode/: tools.md
(+7 files in other folders)
