[package]
name = "pyext-countloop"
version = "0.2.0"
authors = ["Gustavo Freitas <gustavo@gmf-tech.com>"]

[lib]
name = "countloop"
crate-type = ["cdylib"]

[dependencies.cpython]
version = "0.2.0"
features = ["extension-module"]

[dependencies]
ramp = "0.5.0"

[features]
# This is examined by ./build.rs to determine which python version 
# to try to bind to.
default = ["python-3"]

# Bind to any python 3.x.
python-3 = []

# Or, bind to a particular minor version.
python-3-4 = []
python-3-5 = []
python-3-6 = []